fix: navbar and project image z-index

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -28,6 +28,7 @@ nav {
   grid-template-columns: 1fr 1fr;
   background-color: #36363a;
   overflow: hidden;
+  z-index: 2;
 }
 
 .nav-image {
